# flick

./: .README.swp  Cargo.toml  README.md  md  pyproject.toml  requirements.txt
.github/workflows/: python.yml  rust.yml
bridge/: Cargo.toml
bridge/src/: device.rs  lib.rs  message.rs  packet.rs
bridge/src/command/: mod.rs
flightctrl/: Cargo.toml
flightctrl/src/: logging.rs  main.rs  math.rs  simulation.rs
flightctrl/src/control/: lqr.rs  mod.rs  pid.rs
flightctrl/src/physics/: body.rs
flightctrl/src/simulation/: component.rs  rocket.rs
notebook/: static.ipynb  telemetry.py
src/flightctrl/: Cargo.toml
src/flightctrl/src/: boot.S  main.rs  math.rs
src/flightctrl/src/controllers/: lqr.rs
