[package]
name = "flick-flightctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"

num-traits = { version = "0.2", default-features = false }
nalgebra = { version = "0.31.1", default-features = false }

cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
cortex-m-rtic = { version = "0.5.8", default-features = false, features = ["cortex-m-7"] }

teensy4-pins = "0.2.0"
teensy4-panic = "0.2.0"
teensy4-bsp = { version = "0.3", features = ["rt"] }

bmp280-ehal = "0.0.5"
mpu6050 = "0.1.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
